--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["OPENGL"],
+  "cSpell.words": ["OPENGL", "stbi"],
   "files.associations": {
     "array": "cpp",
     "atomic": "cpp",
